<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.LandingActivity">

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Dal Store"
        android:textSize="24dp"></TextView>

    <EditText
        android:id="@+id/depositBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="Enter a deposit"
        android:textSize="16dp"></EditText>

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/membershipSpinner"></Spinner>

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:hint=""
        android:id="@+id/totalDiscountLabel"></TextView>


    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="Calculate Discount"
        android:textSize="16dp"
        android:id="@+id/calculateDiscountButton"></Button>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="16dp"
        android:id="@+id/proceedButton"
        android:text="Proceed"></Button>

</LinearLayout>